# assign_ptr

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  appveyor.yml  assign_ptr.sln
.circleci/: config.yml
.github/workflows/: main.yml
assign_ptr/: assign_ptr.cpp  assign_ptr.hpp  assign_ptr.vcxproj  assign_ptr.vcxproj.filters
assign_ptr_test/: assign_ptr_test.cpp  assign_ptr_test.vcxproj  assign_ptr_test.vcxproj.filters  main.cpp
src/: CMakeLists.txt
src/zpp/: assign_ptr.hpp
test/: CMakeLists.txt  assign_ptr_test.cpp
